--- a/manager/app/src/main/res/values-ja/strings.xml
+++ b/manager/app/src/main/res/values-ja/strings.xml
@@ -162,11 +162,11 @@
     <string name="shrink_sparse_image_message">モジュールが配置されているスパースイメージを実際にサイズに変更します。ただし、これによりモジュールが異常動作をする可能性があります。必要な場合でのみ使用してください (バックアップなど)。</string>
     <string name="settings_uninstall">アンインストール</string>
     <string name="settings_uninstall_temporary">一時アンインストール</string>
-    <string name="settings_uninstall_permanent">完全にアンインストール</string>
+    <string name="settings_uninstall_permanent">完全アンインストール</string>
     <string name="settings_restore_stock_image">ストックイメージを復元</string>
     <string name="settings_uninstall_temporary_message">KernelSU Next を一時的にアンインストールして、次回の再起動後に元の状態に戻します。</string>
     <string name="settings_uninstall_permanent_message">KernelSU Next (root およびすべてのモジュール) を完全で恒久的にアンインストールします。</string>
-    <string name="settings_restore_stock_image_message">OTA の前に使用されるストックファクトリーイメージ (バックアップが存在する場合) を復元します。KernelSU Next をアンインストールする必要がある場合は「完全にアンインストール」を使用してください。</string>
+    <string name="settings_restore_stock_image_message">OTA の前に使用されるストックファクトリーイメージ (バックアップが存在する場合) を復元します。KernelSU Next をアンインストールする必要がある場合は「完全アンインストール」を使用してください。</string>
     <string name="flashing">フラッシュ中</string>
     <string name="flash_success">フラッシュに成功しました</string>
     <string name="flash_failed">フラッシュに失敗しました</string>
